# disease-support-finder

./: .gitignore  LICENSE  PR_DESCRIPTION_API_FIX.md  PR_DESCRIPTION_ENHANCED_LLM_SEARCH.md  PR_DESCRIPTION_ENHANCED_LLM_VALIDATION.md  PR_DESCRIPTION_FIX_OLLAMA.md  PR_DESCRIPTION_JAPANESE_DOCS.md  PR_DESCRIPTION_JAPANESE_ENHANCED.md  PR_DESCRIPTION_METAL.md  PR_DESCRIPTION_MLX.md  PR_DESCRIPTION_MODEL_CORRECTIONS.md  PR_DESCRIPTION_PHI4_REMOVAL.md  PR_DESCRIPTION_SERVICE_LAYER.md  README.md  README_ja.md  llamacpp_setup_guide.md  lmstudio_setup_guide.md  local_llm_guide_ja.md  mac_setup_guide.md  mac_setup_guide_updated.md  run_local_backend.sh  system_architecture_diagram.md  unsloth_setup_guide.md
backend/disease-support-backend/: Dockerfile  fly.toml  pyproject.toml
backend/disease-support-backend/app/: api.py  api_enhanced.py  api_japanese.py  api_llm.py  api_llm_enhanced.py  api_manual.py  api_search_terms.py  api_validation.py  api_website.py  data_loader.py  llm_stats_manager.py  llm_stats_manager_approximate.py  llm_stats_manager_enhanced.py  llm_stats_manager_metal.py  llm_web_scraper.py  llm_web_scraper_approximate.py  llm_web_scraper_enhanced.py  llm_web_scraper_japanese.py  llm_web_scraper_metal.py  llm_web_scraper_part2.py  llm_web_scraper_part3.py  main.py  main_llm.py  main_llm_enhanced.py  models.py  models_enhanced.py  models_llm_enhanced.py  stats_manager.py  stats_manager_enhanced.py  web_scraper.py
backend/disease-support-backend/app/llm_providers/: __init__.py  llamacpp_provider.py  lmstudio_provider.py  mlx_provider.py  ollama_provider.py
(+31 files in other folders)
